The format is based on [Keep a Changelog](http://keepachangelog.com/en/1.0.0/)
and this project **does not adhere to [Semantic Versioning](http://semver.org/spec/v2.0.0.html)**.

## [Unreleased]

### Added

### Changed

### Deprecated

### Removed

### Fixed

### Security

check_debiansecurity: Consider both https://deb\.debian\.org/debian-security/ and https://security\.debian\.org/debian-security/ as valid since both are documented as such.

## [22.03.1] 2022-03-22

### Changed

check_autoif : Ignore lxcbr interfaces, new since bullseye

## [22.03] 2022-03-15

### Added

check_mysqlmunin : Complain if munin plugin mysql_commands returns an error
check_versions : track minifirewall version

## [21.10.4] 2021-10-25

### Changed

* IS_CHECK_VERSIONS disabled in cron mode

## [21.10.3] 2021-10-22

### Added

* Check for newer versions
* don't use "add-vm --version" yet

## [21.10.2] 2021-10-22

### Changed
Let's try the --version flag before falling back to grep for the constant

## [21.10.1] 2021-10-01

### Added

* IS_SSHALLOWUSERS: also scan /etc/ssh/sshd_config.d
* IS_CHECK_VERSIONS: check installed versions of Evolix programs

## [21.10] 2021-10-01

### Fixed

* IS_DEBIANSECURITY: optional trailing slash 

## [21.09] 2021-09-30

### Added

* Check for bullseye security repository
* Checks for new minifirewall configuration
* Improve MySQL utils configuration checks

## [21.07] 2021-07-07

### Added

* Preliminary Debian 11 « Bullseye » support

### Fixed

* IS_HARDWARERAIDTOOL: match more RAID PCI cards

### Security

## [20.12] 2021-01-18

### Fixed

* IS_EVOLIX_USER: Match on if account name begin by evolix, don't match account name testevolix for example

## [20.12] 2020-04-28

### Added

* support multiple values for SQL_BACKUP_PATH and POSTGRES_BACKUP_PATH

### Changed

* IS_EVOBACKUP_EXCLUDE_MOUNT: exclude disabled backup scripts
* IS_DUPLICATE_FS_LABEL: disable blkid cache
* IS_POSTGRES_BACKUP: look for compressed backup too